2011-05-01  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Adam Barth.

        Enable strict OwnPtr for PLATFORM(WIN)
        https://bugs.webkit.org/show_bug.cgi?id=59881

        * wtf/OwnPtr.h:

2011-05-01  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=59896
        Remove JmpSrc/JmpDst types.

        The JmpSrc/JmpDst classes predate the MacroAssembler interface. Having these
        object be per-assembler in unhelpful, causes unnecessary code duplication,
        and prevents the AssemblerBuffer from providing a richer type for labels.
        The limited semantic meaning that they did convey is undermined by the manner
        in which their meanings have been overloaded (use of JmpSrc for Call, JmpDst
        for data labels).

        Jumps on ARMv7 have had additional information added to the object via the
        ARMv7 JmpSrc. This data should probably be in the instruction stream. This
        patch does not fix the problem, and moves the data (ifdefed) to
        AbstractMacroAssembler::Jump (which is effectively where it was before!).
        This at least closes the hole such that no further data may be added to JmpSrc,
        but this is unfortunate, and should be cleaned up.

        * assembler/ARMAssembler.h:
        (JSC::ARMAssembler::blx):
        (JSC::ARMAssembler::label):
        (JSC::ARMAssembler::align):
        (JSC::ARMAssembler::loadBranchTarget):
        (JSC::ARMAssembler::jmp):
        (JSC::ARMAssembler::linkPointer):
        (JSC::ARMAssembler::linkJump):
        (JSC::ARMAssembler::linkCall):
        (JSC::ARMAssembler::getRelocatedAddress):
        (JSC::ARMAssembler::getDifferenceBetweenLabels):
        (JSC::ARMAssembler::getCallReturnOffset):
        * assembler/ARMv7Assembler.h:
        (JSC::ARMv7Assembler::b):
        (JSC::ARMv7Assembler::blx):
        (JSC::ARMv7Assembler::bx):
        (JSC::ARMv7Assembler::label):