@@ -1,3 +1,12 @@
+2011-05-01  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by David Levin.
+
+        Enable strict mode for OwnPtr and PassOwnPtr
+        https://bugs.webkit.org/show_bug.cgi?id=59428
+
+        * wtf/OwnPtr.h:
+
 2011-05-01  Patrick Gansterer  <paroga@webkit.org>
 
         Reviewed by Adam Barth.
